add "wait: true" to my-secrets kustomizations

--- a/clusters/moo-cluster/my-secrets/my-secrets.yaml
+++ b/clusters/moo-cluster/my-secrets/my-secrets.yaml
@@ -14,6 +14,7 @@ spec:
   timeout: 30s
   path: ./secrets/moo-cluster
   prune: false
+  wait: true
   sourceRef:
     kind: GitRepository
     name: my-secrets-branch
