--- a/clusters/moo-cluster/my-secrets/certificates.yaml
+++ b/clusters/moo-cluster/my-secrets/certificates.yaml
@@ -14,6 +14,7 @@ spec:
   timeout: 30s
   path: ./certificates/moo-cluster
   prune: false
+  wait: true
   sourceRef:
     kind: GitRepository
     name: my-secrets-branch
