onboard the monitoring repo in our own branch

--- a/infrastructure/monitoring/source.yaml
+++ b/infrastructure/monitoring/source.yaml
@@ -7,5 +7,5 @@ metadata:
 spec:
   interval: 30m0s
   ref:
-    branch: main
-  url: https://github.com/fluxcd/flux2
+    branch: monitoring
+  url: https://github.com/kingdonb/flux2
