--- a/infrastructure/ingress-nginx/internal-helmrelease.yaml
+++ b/infrastructure/ingress-nginx/internal-helmrelease.yaml
@@ -26,9 +26,8 @@ spec:
         name: internal
         default: true
         controllerValue: "k8s.io/ingress-nginx-internal"
+      podAnnotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "10254"
       metrics:
         enabled: true
-        service:
-          annotations:
-            prometheus.io/scrape: "true"
-            prometheus.io/port: "10254"
