--- a/infrastructure/keycloak/keycloak-db-user-configmap.yaml
+++ b/infrastructure/keycloak/keycloak-db-user-configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  DB_ADDR: keycloak-db.nerdland.local
+  DB_ADDR: keycloak-db.turkey.local
   DB_DATABASE: keycloak
   DB_PORT: "3306"
   DB_USER: keycloak_admin
