--- a/clusters/aks-kuberkingdon/flux-system/kustomization.yaml
+++ b/clusters/aks-kuberkingdon/flux-system/kustomization.yaml
@@ -13,7 +13,7 @@ patches:
     patch: |-
       - op: add
         path: /spec/template/spec/containers/0/args/-
-        value: --aws-autologin-for-acr
+        value: --azure-autologin-for-acr
 images: # []
 - name: ghcr.io/fluxcd/image-reflector-controller
   newName: docker.io/kingdonb/image-reflector-controller
