set wait: false

--- a/clusters/moo-cluster/traefik/flux-kustomization.yaml
+++ b/clusters/moo-cluster/traefik/flux-kustomization.yaml
@@ -8,7 +8,7 @@ spec:
   timeout: 30s
   path: ./apps/traefik
   prune: false
-  wait: true
+  wait: false
   sourceRef:
     kind: GitRepository
     name: flux-system
